--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/3130acdd01.js" crossorigin="anonymous"></script>
   <title>CV Application</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./src/components/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
